# Glary-Utilities

./: .gitattributes  .gitignore  LINUX_OPTIMIZATION.md  MANIFEST.in  README.md  build.py  main.py  pyproject.toml  requirements.txt  run.py  setup-venv.bat  test_custom_window.py  test_linux_window.py
logs/: .gitkeep
resources/themes/: blue.json  purple.json
resources/translations/: en.json  zh.json
setup/: setup-venv.sh
src/: animations.py  check_resources.py  cleanup.py  config.py  main.py  main_window.py  settings.py  settings_manager.py  splash_screen.py
src/components/: base_component.py  boot_repair.py  dashboard.py  disk_check.py  dism_tool.py  gpu_info.py  icons.py  network_reset.py  placeholder.py  settings.py  settings_fixed.py  system_cleaner.py  system_info.py  system_repair.py  virus_scan.py
src/resources/themes/: custom.json  dark.json  green.json  light.json
src/resources/translations/: en.json  zh.json
src/tools/: base_tools.py  boot_repair.py  disk_check.py  dism_tools.py  network_reset.py  system_cleaner.py  system_repair.py  virus_scan.py
src/translations/: en.json  zh.json
src/utils/: animations.py  exception_handler.py  logger.py  platform.py  platform_utils.py  resource_manager.py  resource_utils.py  settings.py  settings_manager.py  startup_manager.py  theme_manager.py
tools/: refactor_to_pyqt6.py
