[project]
name = "glary-utilities"
version = "1.0.0"
description = "Glary Utilities - System optimization and maintenance tools"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altgraph>=0.17.4",
    "gputil>=1.4.0",
    "packaging>=24.2",
    "pefile>=2023.2.7",
    "pillow>=11.1.0",
    "psutil>=7.0.0",
    "pyinstaller-hooks-contrib>=2025.2",
    "pyqt5>=5.15.11",
    "pyqt5-qt5>=5.15.2",
    "PyQt5_sip",
    "pyqtchart>=5.15.7",
    "pyqtchart-qt5>=5.15.2",
    "setuptools>=78.1.0",
    "pywin32; sys_platform == 'win32'",
    "pywin32-ctypes; sys_platform == 'win32'",
    "WMI; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
build = [
    "pyinstaller>=6.0.0",
    "cx-freeze>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/"
